# terraform-aws-action-helper

./: .gitignore  .pre-commit-config.yaml  .pre-commit.config.yaml  .terraform-docs.yml  CHANGELOG.md  README.md  main.tf  outputs.tf  variables.tf  versions.tf
.generate/: generate_module.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  service_list.json
.generate/template/: cookiecutter.json
.generate/template/{{cookiecutter.service_name}}/: README.md  {{ cookiecutter.service_name }}-actions.tf  {{ cookiecutter.service_prefix }}-actions.tf
.generate/tests/: test_generate_module.py
examples/filter/: main.tf  outputs.tf  variables.tf
examples/iam-policy/: main.tf  outputs.tf
examples/minimal-on-off-services/: main.tf  variables.tf
examples/wrapper/: variables.tf
modules/: README.md
modules/accountmanagement/: README.md  account-actions.tf  accountmanagement-actions.tf
modules/activate/: README.md  activate-actions.tf
modules/alexaforbusiness/: README.md  a4b-actions.tf  alexaforbusiness-actions.tf
modules/amazonapigateway/: amazonapigateway-actions.tf
modules/amazonappflow/: amazonappflow-actions.tf
modules/amazonappstream2.0/: amazonappstream2.0-actions.tf
modules/amazonbraket/: amazonbraket-actions.tf
modules/amazonclouddirectory/: amazonclouddirectory-actions.tf
modules/amazoncloudfront/: amazoncloudfront-actions.tf
modules/amazoncloudsearch/: amazoncloudsearch-actions.tf
modules/amazoncloudwatchapplicationinsights/: amazoncloudwatchapplicationinsights-actions.tf
modules/amazonec2/: amazonec2-actions.tf
(+1043 files in other folders)
